# flask-value-checker

./: .gitignore  LICENSE  README.md  TODO.md  ideas.py  pyproject.toml  pytest.ini
flask_value_checker/: __init__.py  errors.py  invigilator.py  value_checker.py  value_checker_class.py
flask_value_checker/restrictions/: __init__.py  errors.py  generic_restriction.py  parsing.py  restrictions.py
flask_value_checker/restrictions/rtypes/: _float.py  _int.py  file.py  string.py
tests/: helper.py  test_ValueChecker.py  test_simple_flask.py  test_str.py
